# NER

./: .gitignore  COLAB_GPU_GUIDE.md  README.md  README_NER.md  app.py  pyproject.toml  requirements-deep.txt  requirements-streamlit.txt  requirements.txt
data/processed/: test.conll  test.txt  train.conll  train.txt  valid.conll  valid.txt
data/raw/: MIDD.csv
models/: hmm_wikiann_vi.ipynb
models/deep_ner/roberta_crf/: ner_config.json
ner_v03/: README.md  pubspec.yaml
ner_v03/A_INFO/: README.md  ner_entity_relationship_project_info.txt
ner_v03/android/app/: build.gradle.kts
ner_v03/backends/: requirements.txt
ner_v03/backends/app/: main.py
ner_v03/lib/: main.dart
ner_v03/linux/: CMakeLists.txt
ner_v03/test/: widget_test.dart
ner_v03/web/: index.html  manifest.json
ner_v03/windows/: CMakeLists.txt
notebooks/: 00_setup_and_prepare.ipynb  01_transformer_token_classification.ipynb  01_transformer_token_classification_khoi.ipynb  02_transformer_crf_models.ipynb  03_global_pointer_and_global_context.ipynb  04_select_best_model.ipynb  BERT_GlobalContext_NER.ipynb  COLAB_GPU_LAUNCHER.ipynb  NER_BERT_CRF.ipynb  NER_GlobalPointer.ipynb  NER_PII_Benchmark.ipynb  NER_RoBERTa_CRF.ipynb  Transformer+TokenClassification.ipynb
projects/ner_flutter_demo/: README.md  pubspec.yaml
reports/deep_ner/: leaderboard.md  roberta_crf.json
reports/hmm_wikiann_vi/: metrics.csv  predictions.json
src/: deep_ner_models.py  evaluate_receipt_dataset.py  prepare_ner_data.py  train_ner_sklearn.py
src/visualization/: streamlit_app.py
tests/: preprocess.py
(+44 files in other folders)
