[project]
name = "intro-to-nlp-project"
version = "0.1.0"
description = "Intro to NLP course project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "paddleocr>=3.0.0",
    "paddlepaddle==3.2.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
